Bug 314126 - Wrong shortcut shown in menu for New Message to Mailing List
Summary: Wrong shortcut shown in menu for New Message to Mailing List
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: UI (other bugs)
Version First Reported In: 4.9.5
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-01-30 11:40 UTC by Graeme Hewson
Modified: 2013-01-30 14:01 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.10
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Graeme Hewson 2013-01-30 11:40:46 UTC
Menu entry Message / New Message to Mailing-List shows the shortcut as Ctrl+Shift+N, but clicking on the menu entry or entering the shortcut has no effect. If kmail was started from a terminal, this message is displayed:

KMail::Util::mailingListsHandleURL: Can't handle url

The shortcut L works for me.

Also, in correct English the text should say "Mailing List", without a hyphen.
Comment 1 Laurent Montel 2013-01-30 11:54:43 UTC
I fixed it in 4.10
Reopen if necessary.
Comment 2 Laurent Montel 2013-01-30 12:26:22 UTC
no finally it's an other bug.
Will fix now.
Comment 3 Laurent Montel 2013-01-30 12:39:06 UTC
Git commit 7de41bc8953a09bd2c68da4581b7e451812210b7 by Montel Laurent.
Committed on 30/01/2013 at 13:38.
Pushed by mlaurent into branch 'KDE/4.10'.

Fix Bug 314126 - Wrong shortcut shown in menu for New Message to Mailing

List

FIXED-IN: 4.10

M  +7    -4    kmail/util.cpp
M  +2    -2    kmail/util.h

http://commits.kde.org/kdepim/7de41bc8953a09bd2c68da4581b7e451812210b7
Comment 4 Laurent Montel 2013-01-30 12:39:59 UTC
Problem that you configurate in mailing folder properties a url which doesn't start with mailto:

Now it's fixed.