Fix Bug 314126 - Wrong shortcut shown in menu for New Message to Mailing

List

FIXED-IN: 4.10
BUG: 314126